sdk/batch/arm-batch/samples/v7/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                               | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| --------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [applicationCreateSample.js][applicationcreatesample]                                                                       | Adds an application to the specified Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationCreate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [applicationDeleteSample.js][applicationdeletesample]                                                                       | Deletes an application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [applicationGetSample.js][applicationgetsample]                                                                             | Gets information about the specified application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [applicationListSample.js][applicationlistsample]                                                                           | Lists all of the applications in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [applicationPackageActivateSample.js][applicationpackageactivatesample]                                                     | Activates the specified application package. This should be done after the `ApplicationPackage` was created and uploaded. This needs to be done before an `ApplicationPackage` can be used on Pools or Tasks. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageActivate.json                                                                                                                                                                                                                                                                                                                                              |
| [applicationPackageCreateSample.js][applicationpackagecreatesample]                                                         | Creates an application package record. The record contains a storageUrl where the package should be uploaded to. Once it is uploaded the `ApplicationPackage` needs to be activated using `ApplicationPackageActive` before it can be used. If the auto storage account was configured to use storage keys, the URL returned will contain a SAS. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageCreate.json                                                                                                                                                                                                             |
| [applicationPackageDeleteSample.js][applicationpackagedeletesample]                                                         | Deletes an application package record and its associated binary file. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [applicationPackageGetSample.js][applicationpackagegetsample]                                                               | Gets information about the specified application package. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [applicationPackageListSample.js][applicationpackagelistsample]                                                             | Lists all of the application packages in the specified application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationPackageList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [applicationUpdateSample.js][applicationupdatesample]                                                                       | Updates settings for the specified application. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/ApplicationUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [batchAccountCreateSample.js][batchaccountcreatesample]                                                                     | Creates a new Batch account with the specified parameters. Existing accounts cannot be updated with this API and should instead be updated with the Update Batch Account API. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountCreate_BYOS.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [batchAccountDeleteSample.js][batchaccountdeletesample]                                                                     | Deletes the specified Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [batchAccountGetDetectorSample.js][batchaccountgetdetectorsample]                                                           | Gets information about the given detector for a given Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/DetectorGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [batchAccountGetKeysSample.js][batchaccountgetkeyssample]                                                                   | This operation applies only to Batch accounts with allowedAuthenticationModes containing 'SharedKey'. If the Batch account doesn't contain 'SharedKey' in its allowedAuthenticationMode, clients cannot use shared keys to authenticate, and must use another allowedAuthenticationModes instead. In this case, getting the keys will fail. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountGetKeys.json                                                                                                                                                                                                                       |
| [batchAccountGetSample.js][batchaccountgetsample]                                                                           | Gets information about the specified Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [batchAccountListByResourceGroupSample.js][batchaccountlistbyresourcegroupsample]                                           | Gets information about the Batch accounts associated with the specified resource group. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountListByResourceGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [batchAccountListDetectorsSample.js][batchaccountlistdetectorssample]                                                       | Gets information about the detectors available for a given Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/DetectorList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [batchAccountListOutboundNetworkDependenciesEndpointsSample.js][batchaccountlistoutboundnetworkdependenciesendpointssample] | Lists the endpoints that a Batch Compute Node under this Batch Account may call as part of Batch service administration. If you are deploying a Pool inside of a virtual network that you specify, you must make sure your network allows outbound access to these endpoints. Failure to allow access to these endpoints may cause Batch to mark the affected nodes as unusable. For more information about creating a pool inside of a virtual network, see https://docs.microsoft.com/azure/batch/batch-virtual-network x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountListOutboundNetworkDependenciesEndpoints.json |
| [batchAccountListSample.js][batchaccountlistsample]                                                                         | Gets information about the Batch accounts associated with the subscription. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [batchAccountRegenerateKeySample.js][batchaccountregeneratekeysample]                                                       | This operation applies only to Batch accounts with allowedAuthenticationModes containing 'SharedKey'. If the Batch account doesn't contain 'SharedKey' in its allowedAuthenticationMode, clients cannot use shared keys to authenticate, and must use another allowedAuthenticationModes instead. In this case, regenerating the keys will fail. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountRegenerateKey.json                                                                                                                                                                                                            |
| [batchAccountSynchronizeAutoStorageKeysSample.js][batchaccountsynchronizeautostoragekeyssample]                             | Synchronizes access keys for the auto-storage account configured for the specified Batch account, only if storage key authentication is being used. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountSynchronizeAutoStorageKeys.json                                                                                                                                                                                                                                                                                                                                                                                            |
| [batchAccountUpdateSample.js][batchaccountupdatesample]                                                                     | Updates the properties of an existing Batch account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/BatchAccountUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [certificateCancelDeletionSample.js][certificatecanceldeletionsample]                                                       | If you try to delete a certificate that is being used by a pool or compute node, the status of the certificate changes to deleteFailed. If you decide that you want to continue using the certificate, you can use this operation to set the status of the certificate back to active. If you intend to delete the certificate, you do not need to run this operation after the deletion failed. You must make sure that the certificate is not being used by any resources, and then you can try again to delete the certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateCancelDeletion.json                          |
| [certificateCreateSample.js][certificatecreatesample]                                                                       | Creates a new certificate inside the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateCreate_Full.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [certificateDeleteSample.js][certificatedeletesample]                                                                       | Deletes the specified certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [certificateGetSample.js][certificategetsample]                                                                             | Gets information about the specified certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [certificateListByBatchAccountSample.js][certificatelistbybatchaccountsample]                                               | Lists all of the certificates in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [certificateUpdateSample.js][certificateupdatesample]                                                                       | Updates the properties of an existing certificate. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/CertificateUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [locationCheckNameAvailabilitySample.js][locationchecknameavailabilitysample]                                               | Checks whether the Batch account name is available in the specified region. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationCheckNameAvailability_AlreadyExists.json                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [locationGetQuotasSample.js][locationgetquotassample]                                                                       | Gets the Batch service quotas for the specified subscription at the given location. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationGetQuotas.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [locationListSupportedCloudServiceSkusSample.js][locationlistsupportedcloudserviceskussample]                               | Gets the list of Batch supported Cloud Service VM sizes available at the given location. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationListCloudServiceSkus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| [locationListSupportedVirtualMachineSkusSample.js][locationlistsupportedvirtualmachineskussample]                           | Gets the list of Batch supported Virtual Machine VM sizes available at the given location. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/LocationListVirtualMachineSkus.json                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [operationsListSample.js][operationslistsample]                                                                             | Lists available operations for the Microsoft.Batch provider x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/OperationsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [poolCreateSample.js][poolcreatesample]                                                                                     | Creates a new pool inside the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolCreate_SharedImageGallery.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [poolDeleteSample.js][pooldeletesample]                                                                                     | Deletes the specified pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [poolDisableAutoScaleSample.js][pooldisableautoscalesample]                                                                 | Disables automatic scaling for a pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolDisableAutoScale.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [poolGetSample.js][poolgetsample]                                                                                           | Gets information about the specified pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [poolListByBatchAccountSample.js][poollistbybatchaccountsample]                                                             | Lists all of the pools in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [poolStopResizeSample.js][poolstopresizesample]                                                                             | This does not restore the pool to its previous state before the resize operation: it only stops any further changes being made, and the pool maintains its current state. After stopping, the pool stabilizes at the number of nodes it was at when the stop operation was done. During the stop operation, the pool allocation state changes first to stopping and then to steady. A resize operation need not be an explicit resize pool request; this API can also be used to halt the initial sizing of the pool when it is created. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolStopResize.json                               |
| [poolUpdateSample.js][poolupdatesample]                                                                                     | Updates the properties of an existing pool. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PoolUpdate_EnableAutoScale.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionDeleteSample.js][privateendpointconnectiondeletesample]                                           | Deletes the specified private endpoint connection. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionDelete.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [privateEndpointConnectionGetSample.js][privateendpointconnectiongetsample]                                                 | Gets information about the specified private endpoint connection. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [privateEndpointConnectionListByBatchAccountSample.js][privateendpointconnectionlistbybatchaccountsample]                   | Lists all of the private endpoint connections in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
| [privateEndpointConnectionUpdateSample.js][privateendpointconnectionupdatesample]                                           | Updates the properties of an existing private endpoint connection. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateEndpointConnectionUpdate.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [privateLinkResourceGetSample.js][privatelinkresourcegetsample]                                                             | Gets information about the specified private link resource. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateLinkResourceGet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| [privateLinkResourceListByBatchAccountSample.js][privatelinkresourcelistbybatchaccountsample]                               | Lists all of the private link resources in the specified account. x-ms-original-file: specification/batch/resource-manager/Microsoft.Batch/stable/2022-06-01/examples/PrivateLinkResourcesList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node applicationCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node applicationCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[applicationcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationCreateSample.js
[applicationdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationDeleteSample.js
[applicationgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationGetSample.js
[applicationlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationListSample.js
[applicationpackageactivatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationPackageActivateSample.js
[applicationpackagecreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationPackageCreateSample.js
[applicationpackagedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationPackageDeleteSample.js
[applicationpackagegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationPackageGetSample.js
[applicationpackagelistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationPackageListSample.js
[applicationupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/applicationUpdateSample.js
[batchaccountcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountCreateSample.js
[batchaccountdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountDeleteSample.js
[batchaccountgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountGetDetectorSample.js
[batchaccountgetkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountGetKeysSample.js
[batchaccountgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountGetSample.js
[batchaccountlistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountListByResourceGroupSample.js
[batchaccountlistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountListDetectorsSample.js
[batchaccountlistoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountListOutboundNetworkDependenciesEndpointsSample.js
[batchaccountlistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountListSample.js
[batchaccountregeneratekeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountRegenerateKeySample.js
[batchaccountsynchronizeautostoragekeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountSynchronizeAutoStorageKeysSample.js
[batchaccountupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/batchAccountUpdateSample.js
[certificatecanceldeletionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/certificateCancelDeletionSample.js
[certificatecreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/certificateCreateSample.js
[certificatedeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/certificateDeleteSample.js
[certificategetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/certificateGetSample.js
[certificatelistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/certificateListByBatchAccountSample.js
[certificateupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/certificateUpdateSample.js
[locationchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/locationCheckNameAvailabilitySample.js
[locationgetquotassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/locationGetQuotasSample.js
[locationlistsupportedcloudserviceskussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/locationListSupportedCloudServiceSkusSample.js
[locationlistsupportedvirtualmachineskussample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/locationListSupportedVirtualMachineSkusSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/operationsListSample.js
[poolcreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolCreateSample.js
[pooldeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolDeleteSample.js
[pooldisableautoscalesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolDisableAutoScaleSample.js
[poolgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolGetSample.js
[poollistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolListByBatchAccountSample.js
[poolstopresizesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolStopResizeSample.js
[poolupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/poolUpdateSample.js
[privateendpointconnectiondeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/privateEndpointConnectionDeleteSample.js
[privateendpointconnectiongetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/privateEndpointConnectionGetSample.js
[privateendpointconnectionlistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/privateEndpointConnectionListByBatchAccountSample.js
[privateendpointconnectionupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/privateEndpointConnectionUpdateSample.js
[privatelinkresourcegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/privateLinkResourceGetSample.js
[privatelinkresourcelistbybatchaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/batch/arm-batch/samples/v7/javascript/privateLinkResourceListByBatchAccountSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-batch?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/batch/arm-batch/README.md
